--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "workshops_express-101-books-api",
   "version": "1.0.0",
   "description": "<div align=\"center\">     <img alt=\"School of Code\" src=\"./images/soc-logo.png\" width=\"60\" /> </div> <h1 align=\"center\">   Express 101 - books API </h1>",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.2.3"
   }
 }
