--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "<div align=\"center\">     <img alt=\"School of Code\" src=\"./images/soc-logo.png\" width=\"60\" /> </div> <h1 align=\"center\">   Express 101 - books API </h1>",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
