--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "workshops_express-101-books-api",
   "version": "1.0.0",
   "description": "<div align=\"center\">     <img alt=\"School of Code\" src=\"./images/soc-logo.png\" width=\"60\" /> </div> <h1 align=\"center\">   Express 101 - books API </h1>",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +23,6 @@
   },
   "devDependencies": {
     "jest": "^28.1.0",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.2.3"
+    "nodemon": "^2.0.12"
   }
 }
