--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "workshops_express-101-books-api",
   "version": "1.0.0",
   "description": "<div align=\"center\">     <img alt=\"School of Code\" src=\"./images/soc-logo.png\" width=\"60\" /> </div> <h1 align=\"center\">   Express 101 - books API </h1>",
-  "main": "app.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,12 @@
     "url": "https://github.com/School-of-Code-HQ/workshops_express-101-books-api/issues"
   },
   "homepage": "https://github.com/School-of-Code-HQ/workshops_express-101-books-api#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
   "devDependencies": {
-    "jest": "^28.1.0",
-    "nodemon": "^2.0.12"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
